force-app/main/default/objects/vlocity_ins__MarketingEventRegistration__c/fields/vlocity_ins__AttendanceType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__AttendanceType__c</fullName>
    <label>Attendance Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Registered</fullName>
            </value>
            <value>
                <fullName>Walk-In</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>