force-app/main/default/objects/vlocity_ins__MarketingEventRegistration__c/fields/vlocity_ins__IsCancelled__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__IsCancelled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates this registration has been cancelled.</description>
    <label>Cancelled</label>
    <type>Checkbox</type>
</CustomField>