force-app/main/default/objects/vlocity_ins__MarketingEventRegistration__c/fields/vlocity_ins__MarketingEventId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__MarketingEventId__c</fullName>
    <label>Marketing Event</label>
    <referenceTo>vlocity_ins__MarketingEvent__c</referenceTo>
    <relationshipLabel>Registrations</relationshipLabel>
    <relationshipName>MarketingEventRegistrations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>