force-app/main/default/objects/vlocity_ins__MarketingEventRegistration__c/fields/vlocity_ins__RegistrationType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__RegistrationType__c</fullName>
    <label>Registration Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Employee</fullName>
            </value>
            <value>
                <fullName>Media</fullName>
            </value>
            <value>
                <fullName>Member</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Speaker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>